volume_migration/POC2/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-test-service
  namespace: testing
spec:
  ports:
    - port: 5000
  selector:
    app: poc1-test
